unpackaged/main/default/objects/litify_docs__File_Error__c/litify_docs__File_Error__c.object-meta.xml
<CustomObject>
    <description>The error logging SObject.</description>
    <label>File Error</label>
    <nameField>
        <displayFormat>ERROR-{000000}</displayFormat>
        <label>File Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Errors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>