unpackaged/main/default/objects/litify_docs__File_Error__c/fields/litify_docs__Error__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Error__c</fullName>
    <description>The error.</description>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>