unpackaged/main/default/objects/litify_docs__File_Error__c/fields/litify_docs__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Request_Id__c</fullName>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>