unpackaged/main/default/objects/litify_docs__File_Error__c/fields/litify_docs__Stack_Trace_String__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Stack_Trace_String__c</fullName>
    <description>The stack trace string.</description>
    <label>Stack Trace String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>