unpackaged/main/default/objects/litify_docs__File_Error__c/fields/litify_docs__User__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The running user when the error record was generated.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>File_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>